syntax = "proto3";

package proto;

option go_package = ".;proto";

service RemoteCall {
    rpc Call(CallRequest) returns (CallReply) {}
    rpc Confirm (RemoteEmpty) returns (RemoteConfirmReply) {}
}

message CallRequest {
    string funcName = 3;
    repeated string paramsList = 1;
    repeated string TypeList = 2;
}

message CallReply {
    string status = 3;
    repeated string paramsList = 1;
    repeated string TypeList = 2;
}

message RemoteEmpty {}

message RemoteConfirmReply {
    string status = 1;
}